Corrected padding and spacing between components.

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ h2 {
   color: #FFFFFF;
   margin-bottom: 0;
   
+  
 }
 
 h4 {
@@ -22,7 +23,7 @@ h4 {
 
 .container-info, .container-about, .container-interests {
   margin: 0 auto;
-  padding: 2em 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -31,6 +32,11 @@ h4 {
   width: 50%;
   
   
+  
+}
+
+.container-info h2 {
+  margin-top: 1em;
 }
 
 img {
@@ -39,7 +45,7 @@ img {
 
 .buttons {
   display: flex;
-  margin-bottom: 1em;
+  
 }
 
 button {
@@ -81,9 +87,20 @@ button {
 
 .container-about h2, .container-interests h2 {
   color: #FFFFFF;
+  margin-right: auto;
+  padding-left: 1em;
+  
+  
+  
 }
 
 
 .container-about p, .container-interests p {
   color: #DCDCDC;
+  padding-left: 1.5em;
+  margin-right: auto;
+  max-width: 90%;
+  text-align: start;
+
+  margin-bottom: 0;
 }
